--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "author": {
     "name": "Gustavo Machado",
-    "email": "machadogj@gmail.com"
+    "email": "machadogj@gmail.com",
+    "url": "http://machadogj.com/"
   },
   "repository": {
     "type": "git",
